# 114_cv

./: .gitignore
hw1/: pyproject.toml
hw1/R13525122/: JBF.py
hw1/part1/: DoG.py  eval.py  main.py
hw1/part2/: main.py
hw2/: pyproject.toml  report.md  requirements_py36.txt
hw2/p1/: p1.py  p1_run.sh  utils.py
hw2/p2/: config.py  dataset.py  model.py  p2_inference_confident.py  p2_train.py
hw2/r13525122_hw2/p1/: p1.py
hw2/r13525122_hw2/p2/: config.py  dataset.py  model.py  p2_inference.py  p2_train.py
hw3/: pyproject.toml  requirements.txt
hw3/src/: part1.py  part2.py  part3.py  part4.py  utils.py
