[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gdown==5.2.0",
    "matplotlib==3.7.5",
    "numpy==1.24.0",
    "opencv-python>=4.8.1.78",
    "pillow==10.4.0",
    "scikit-learn==1.3.2",
    "scipy==1.8.1",
    "tqdm==4.67.1",
]
